{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 16,
  "lineage": "4c350fef-7c50-ee94-b0c4-3e078bb55d03",
  "resources": [
    {
      "module": "module.hello_world_app",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330248160669:vpc/vpc-302bf84d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-a43f93cb",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-96bbc7ec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-302bf84d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-b4a3fdca",
            "owner_id": "330248160669",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.hello_world_app",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:330248160669:targetgroup/hello-world-prod/08efb4b2e9dab929",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:330248160669:listener-rule/app/hello-world-prod/be346d727d64d893/1151dd033a92d16c/03f3aa972502e59c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:330248160669:listener-rule/app/hello-world-prod/be346d727d64d893/1151dd033a92d16c/03f3aa972502e59c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:330248160669:listener/app/hello-world-prod/be346d727d64d893/1151dd033a92d16c",
            "priority": 100
          },
          "dependencies": [
            "module.hello_world_app.aws_lb_target_group.asg",
            "module.hello_world_app.data.aws_subnet_ids.default",
            "module.hello_world_app.data.aws_vpc.default",
            "module.hello_world_app.module.alb.aws_lb.example",
            "module.hello_world_app.module.alb.aws_lb_listener.http",
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:330248160669:targetgroup/hello-world-prod/08efb4b2e9dab929",
            "arn_suffix": "targetgroup/hello-world-prod/08efb4b2e9dab929",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:330248160669:targetgroup/hello-world-prod/08efb4b2e9dab929",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hello-world-prod",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-302bf84d"
          },
          "dependencies": [
            "module.hello_world_app.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:330248160669:loadbalancer/app/hello-world-prod/be346d727d64d893",
            "arn_suffix": "app/hello-world-prod/be346d727d64d893",
            "dns_name": "hello-world-prod-634571231.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:330248160669:loadbalancer/app/hello-world-prod/be346d727d64d893",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hello-world-prod",
            "security_groups": [
              "sg-0427a3de8fff3bb08"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-3287046d"
              },
              {
                "subnet_id": "subnet-52f9ae1f"
              },
              {
                "subnet_id": "subnet-bd8e039c"
              },
              {
                "subnet_id": "subnet-c3f933f2"
              },
              {
                "subnet_id": "subnet-ceceb7c0"
              },
              {
                "subnet_id": "subnet-f9098e9f"
              }
            ],
            "subnets": [
              "subnet-3287046d",
              "subnet-52f9ae1f",
              "subnet-bd8e039c",
              "subnet-c3f933f2",
              "subnet-ceceb7c0",
              "subnet-f9098e9f"
            ],
            "vpc_id": "vpc-302bf84d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.hello_world_app.data.aws_subnet_ids.default",
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:330248160669:listener/app/hello-world-prod/be346d727d64d893/1151dd033a92d16c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:330248160669:listener/app/hello-world-prod/be346d727d64d893/1151dd033a92d16c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:330248160669:loadbalancer/app/hello-world-prod/be346d727d64d893",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.hello_world_app.data.aws_subnet_ids.default",
            "module.hello_world_app.module.alb.aws_lb.example",
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330248160669:security-group/sg-0427a3de8fff3bb08",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0427a3de8fff3bb08",
            "ingress": [],
            "name": "hello-world-prod",
            "name_prefix": "",
            "owner_id": "330248160669",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-302bf84d"
          }
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3836065538",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0427a3de8fff3bb08",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-601231075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0427a3de8fff3bb08",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:330248160669:security-group/sg-063a69dda9575264d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-063a69dda9575264d",
            "ingress": [],
            "name": "hello-world-prod-instance",
            "name_prefix": "",
            "owner_id": "330248160669",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-302bf84d"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.asg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1003202070",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-063a69dda9575264d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "module.hello_world_app.module.asg.aws_security_group.instance"
          ]
        }
      ]
    }
  ]
}